--- a/modulo4/d/d1/estilo/style.css
+++ b/modulo4/d/d1/estilo/style.css
@@ -3,13 +3,19 @@
 *{
     margin: 0px;
     padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 html, body{
     height: 100vh;
     width: 100vw;
     background-color: black;
-    background-image: url(../imagens/fundo-madeira.jpg);
+}
+
+body{
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 main {
@@ -21,9 +27,38 @@ section#telefone{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50% -50%);
+    transform: translate(-50%, -50%);
+      
+    height: 627px;
+    width: 311px;
+    background: url(../imagens/frame-iphone.png) no-repeat ;
+}
 
-    width: 500px;
-    height: 500px;
-    background-color: blue;
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+}
+
+
+
+section#redes-sociais{
+    text-align: right;
+}
+
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.603);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
+    transition: transform 0.5s;
 }
