--- a/modulo4/exs/ex026/mq004/estilos/mediaquey.css
+++ b/modulo4/exs/ex026/mq004/estilos/mediaquey.css
@@ -4,25 +4,68 @@
 
 /*Typical device Breakpoints
 celular: 600 x 768px
-tablet: 768 x 1024px
-dasktop: 1024 x 1366px
-Grandes telas: 1366px
+tablet: 768 x 992px
+dasktop: 992px x 1200px
+Grandes telas: 1200px
 */
 
 @media print { /*Impressão*/
-    
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) { /* TABLET */
-    body{
-        background-image: url(../img/);
+    *{
+        font-family: 'Courier New', Courier, monospace;
     }
+
+    main{
+        border: 2px solid black;
+    }
+
+    main h1{
+        color: black;
+        text-shadow: none;
+    }
+
+    body{
+        /*background-image: url(../img/back-print.jpg); serve pra nada*/
+    }
+
+    img#phone{ display: none; }
+    img#tablet{display: none;}
+    img#print{display: block;}
+    img#pc{display: none;}
+    img#tv{display: none;}
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1366px) { /* DASKTOP */
-    
+@media screen and (min-width: 768px) and (max-width: 992px) { /* TABLET */
+    body{
+        background-image: url(../img/back-tablet.jpg);
+    }
+
+    img#phone{ display: none; }
+    img#tablet{display: block;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#tv{display: none;}
 }
 
-@media screen and (min-width: 1366px) { /* talas grandes */
-    
+@media screen and (min-width: 992px) and (max-width: 1200px) { /* DASKTOP */
+    body{
+        background-image: url(../img/back-pc.jpg);
+    }
+
+    img#phone{ display: none; }
+    img#tablet{display: none;}
+    img#print{display: none;}
+    img#pc{display: block;}
+    img#tv{display: none;}
+}
+
+@media screen and (min-width: 1200px) { /* talas grandes */
+    body{
+        background-image: url(../img/back-tv.jpg);
+    }
+
+    img#phone{ display: none; }
+    img#tablet{display: none;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#tv{display: block;}
 }
