--- a/modulo4/d/d2/estilos/style.css
+++ b/modulo4/d/d2/estilos/style.css
@@ -98,6 +98,7 @@ div.campo > input {
 
 div.campo > input:focus-within{
     background-color: white;
+    outline: none;
 }
 
 form > input[type=submit] {
